# ParticlesFractal

./: Makefile.am  README.md  autogen.sh  buildpkg.sh  configure.ac  moEffectParticlesFractal.cpp  moEffectParticlesFractal.h  moEffectParticlesFractalFactory.cpp  moEffectParticlesFractalFactory.h  particlesfractal.cbp  particlesfractallinux.cbp  particlesfractalosxleopard.cbp
